# streamingDevice_HDMI

./: .gitignore  404.html  CMakeLists.txt  Detailed_Design_Document.docx  Doxyfile  Makefile  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: docs.yml
Bluetooth_Control_Protocol/: index.html
Codec_Container_API/: index.html
Design_Review_Checklist/: index.html
Detailed_Design_Document/: index.html
Implementation_Document/: index.html
Knowledge_Base/: index.html
Product_Requirements_Document/: index.html
TV_UI_Design_Spec/: index.html
Test_Plan_Template/: index.html
Test_Suite_Document/: index.html
UI_Wireframes_and_User_Journey/: index.html
api/API_Contract_Draft/: index.html
api/hal-interfaces/: index.html
api/media-types/: index.html
api/services/: index.html
architecture/: architecture-generated.mmd
architecture/data-flows/: index.html
architecture/module-map/: index.html
architecture/module-map-generated/: index.html
architecture/overview/: index.html
architecture/system-diagram/: index.html
config/: apps.json  ui_manifest.json
development/adding-apps/: index.html
development/adding-codecs/: index.html
development/contributing/: index.html
development/docs-guide/: index.html
development/project-structure/: index.html
docs/: Bluetooth_Control_Protocol.md  Codec_Container_API.md  Design_Review_Checklist.md  Detailed_Design_Document.md  Implementation_Document.md  Knowledge_Base.md  Product_Requirements_Document.md  TV_UI_Design_Spec.md  Test_Plan_Template.md  Test_Suite_Document.md  UI_Wireframes_and_User_Journey.md  index.md  requirements-docs.txt
docs/api/: API_Contract_Draft.md  hal-interfaces.md  media-types.md  services.md
docs/architecture/: data-flows.md  module-map-generated.md  module-map.md  overview.md  system-diagram.md
docs/development/: adding-apps.md  adding-codecs.md  contributing.md  docs-guide.md  project-structure.md
docs/guides/: build-and-run.md  hdmi-setup.md  quick-start.md
docs/schemas/: streaming_device_schemas.json
docs/testing/: running-tests.md  test-cases.md  test-strategy.md
guides/build-and-run/: index.html
guides/hdmi-setup/: index.html
guides/quick-start/: index.html
include/streaming_device/: media_types.hpp  types.hpp
scripts/: generate_architecture.py  md_to_docx.py
search/: search_index.json
src/: main.cpp
src/common/: event_bus.cpp  event_bus.hpp  exceptions.hpp  logger.hpp
src/hal/: audio_hal.hpp  bluetooth_hal.hpp  codec_hal.hpp  container_hal.hpp  display_hal.hpp  drm_hal.hpp  hal_factory.cpp  hdmi_cec_hal.hpp  input_hal.hpp  media_hal_factory.cpp  power_hal.hpp  storage_hal.hpp  video_pipeline_hal.hpp  wifi_hal.hpp
src/services/: app_launcher_service.cpp  codec_service.cpp  (+20 more)
tests/: CMakeLists.txt  test_bluetooth_control.cpp  test_hal.cpp  test_hdmi_cec.cpp  test_runner.cpp  test_services.cpp
ui-prototype/: README.md  app.js  capture_screenshots.py  index.html  styles.css
(+26 files in other folders)
